@@ -67,8 +67,7 @@ import org.springframework.web.bind.annotation.RestController;
   "jwt-change-token-hint5"
 })
 public class JWTVotesEndpoint extends AssignmentEndpoint {
-
-  public static final String JWT_PASSWORD = TextCodec.BASE64.encode("victory");
+  public static final String JWT_PASSWORD = TextCodec.BASE64.encode(System.getenv("SECRET"));
   private static String validUsers = "TomJerrySylvester";
 
   private static int totalVotes = 38929;
@@ -146,8 +145,7 @@ public class JWTVotesEndpoint extends AssignmentEndpoint {
     MappingJacksonValue value =
         new MappingJacksonValue(
             votes.values().stream()
-                .sorted(comparingLong(Vote::getAverage).reversed())
-                .collect(toList()));
+                .sorted(comparingLong(Vote::getAverage).reversed()).toList());
     if (StringUtils.isEmpty(accessToken)) {
       value.setSerializationView(Views.GuestView.class);
     } else {
